@@ -1,4 +1,6 @@
 # Poprio
+## Documentation
+JavaDoc is avaliable [here](https://noppakorn.github.io/2110215_project)
 ## Dependencies
 - java 17
 - javafx 15
@@ -7,7 +9,3 @@
 java --module-path <PATH TO JAVAFX LIB> --add-modules=javafx.controls,javafx.fxml,javafx.media -jar Poprio.jar
 ```
 ## Building the program from source
-## Building javadoc for this project
-```
-javadoc --module-path <PATH TO JAVAFX LIB> --add-modules=javafx.controls,javafx.fxml,javafx.media ../src/**/**.java
-```
